--- a/project4/style.css
+++ b/project4/style.css
@@ -12,13 +12,13 @@ body {
 
 .pimg1 {
   background-image: url(images/image1.png);
-  min-height: 100%;
+  min-height: 100vh;
 
   position: relative;
   background-size: contain;
   background-position: center;
-  background-repeat: no-repat;
-  background-attachment: fixed;
+  background-repeat: no-repeat;
+ 
 
 }
 .pimg2{
@@ -39,6 +39,14 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+ @media (max-width: 768px) {
+  .pimg1, .pimg2, .pimg3 {
+    background-attachment: scroll;
+    background-size: cover;
+  }
+}
+
 .ptext{
     position: absolute;
     top: 50%;
@@ -68,6 +76,7 @@ body {
   background-color: red;
   color: white
 }
+
 
 
 
