Refactor CSS for parallax sections and text styling

--- a/project4/style.css
+++ b/project4/style.css
@@ -1,33 +1,28 @@
-
 html,
 body {
- height: 100%;
- margin: 0;
- font-size: 16px;
- font-family:"Lato", sans-serif;
- font-weight: 400;
- line-height: 1.8em;
- color: #666;
+  height: 100%;
+  margin: 0;
+  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.8em;
+  color: #666;
 }
 
+/* ---------- Parallax Sections ---------- */
 .pimg1 {
   background-image: url(images/image1.png);
   min-height: 100vh;
-
-  position: relative;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
- 
-
 }
-.pimg2{
-    background-image: url(images/image2.png);
-    min-height: 400px;
+
+.pimg2 {
+  background-image: url(images/image2.png);
+  min-height: 400px;
 }
-.pimg3{
-    background-image: url(images/image3.png);
-    min-height: 400px;
+
+.pimg3 {
+  background-image: url(images/image3.png);
+  min-height: 400px;
 }
 
 .pimg1,
@@ -40,65 +35,46 @@ body {
   background-attachment: fixed;
 }
 
- @media (max-width: 768px) {
-  .pimg1, .pimg2, .pimg3 {
+/* Disable fixed background on phones (avoids zoom issue) */
+@media (max-width: 768px) {
+  .pimg1,
+  .pimg2,
+  .pimg3 {
     background-attachment: scroll;
-    background-size: cover;
+    background-size: cover; /* keeps nice scaling */
   }
 }
 
-.ptext{
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    text-align: center;
-    color: black;
-    font-size: 27px;
-    letter-spacing: 8px;
-    text-transform: uppercase;
+/* ---------- Text Styling ---------- */
+.ptext {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: black;
+  font-size: 27px;
+  letter-spacing: 8px;
+  text-transform: uppercase;
 }
 
-.textBg{
+.textBg {
   background: black;
   color: white;
   padding: 20px;
-
 }
+
+/* ---------- Sections ---------- */
 .section {
   padding: 50px 80px;
   text-align: center;
 }
+
 .section-light {
   background-color: grey;
   color: red;
 }
-.section-dark{
+
+.section-dark {
   background-color: red;
-  color: white
+  color: white;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
